Build call graph locally
