# schema/openapi.json
@@ -340,6 +340,48 @@
         }
       }
     },
+    "/debug/parse_traceback": {
+      "get": {
+        "tags": [
+          "debug"
+        ],
+        "summary": "Parse Traceback Endpoint",
+        "operationId": "parse_traceback_endpoint_debug_parse_traceback_get",
+        "parameters": [
+          {
+            "required": true,
+            "schema": {
+              "title": "Traceback",
+              "type": "string"
+            },
+            "name": "traceback",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Traceback"
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "Validation Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/HTTPValidationError"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/docstring/forline": {
       "get": {
         "tags": [
@@ -728,6 +770,16 @@
         },
         "additionalProperties": false
       },
+      "ProgrammingLangauge": {
+        "title": "ProgrammingLangauge",
+        "enum": [
+          "python",
+          "javascript",
+          "typescript"
+        ],
+        "type": "string",
+        "description": "An enumeration."
+      },
       "Range": {
         "title": "Range",
         "required": [
@@ -795,6 +847,69 @@
             "type": "string"
           }
         }
+      },
+      "Traceback": {
+        "title": "Traceback",
+        "required": [
+          "frames",
+          "message",
+          "error_type",
+          "language"
+        ],
+        "type": "object",
+        "properties": {
+          "frames": {
+            "title": "Frames",
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/TracebackFrame"
+            }
+          },
+          "message": {
+            "title": "Message",
+            "type": "string"
+          },
+          "error_type": {
+            "title": "Error Type",
+            "type": "string"
+          },
+          "language": {
+            "$ref": "#/components/schemas/ProgrammingLangauge"
+          },
+          "full_traceback": {
+            "title": "Full Traceback",
+            "type": "string"
+          }
+        },
+        "additionalProperties": false
+      },
+      "TracebackFrame": {
+        "title": "TracebackFrame",
+        "required": [
+          "filepath",
+          "lineno",
+          "function"
+        ],
+        "type": "object",
+        "properties": {
+          "filepath": {
+            "title": "Filepath",
+            "type": "string"
+          },
+          "lineno": {
+            "title": "Lineno",
+            "type": "integer"
+          },
+          "function": {
+            "title": "Function",
+            "type": "string"
+          },
+          "code": {
+            "title": "Code",
+            "type": "string"
+          }
+        },
+        "additionalProperties": false
       },
       "ValidationError": {
         "title": "ValidationError",
